# trilane

./: .gitattributes  .gitignore  NOTICE  README.md  SECURITY.md
codex-rs/: README.md
codex-rs/trilane-gui/: Cargo.toml  tauri.conf.json
codex-rs/trilane-gui/frontend/: index.html  package-lock.json  package.json
codex-rs/trilane-gui/sop/: system_prompt_v4.md
codex-rs/trilane-gui/src/: main.rs  main_frontend.inc.rs  main_status.inc.rs  mimo_adapter.rs  mimo_adapter_core.inc.rs  mimo_adapter_stream.inc.rs  runbook_attack_graph.inc.rs  (+13 more)
npm/: README.md  package.json
trilane-rs/: Cargo.toml
trilane-rs/trilane-gui/: Cargo.toml  README.md  tauri.conf.json
trilane-rs/trilane-gui/frontend/src/: App.tsx  styles.css
trilane-rs/trilane-gui/frontend/src/components/: AsmGraphModel.ts  SettingsPanel.tsx  StageProgress.tsx
trilane-rs/trilane-gui/frontend/src/lib/: invoke.ts
trilane-rs/trilane-gui/frontend/src/styles/: findings.css
trilane-rs/trilane-gui/icons/: icon.icns
trilane-rs/trilane-gui/src/: main_agent_loop.inc.rs  main_commands.inc.rs  main_config.inc.rs  main_state_sync.inc.rs  main_status.inc.rs  main_tests.inc.rs  main_types.inc.rs  main_workflow_runtime.inc.rs  mimo_adapter_tests.inc.rs  mimo_adapter_translate.inc.rs  runbook.rs  runbook_claims.rs  runbook_claims_impl.inc.rs  runbook_finalize.rs  runbook_findings.inc.rs  runbook_helpers.inc.rs  runbook_lifecycle.inc.rs  runbook_tests.inc.rs  runbook_types.inc.rs  state_store.rs  transcript_log.rs  workflow.rs  workflow_core.inc.rs  workflow_phases.inc.rs  workflow_prompts.inc.rs  workflow_tests.inc.rs
(+12 files in other folders)
